<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="forum"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_forum"
        android:shortcutShortLabel="@string/shortcut_forum_short"
        android:shortcutLongLabel="@string/shortcut_forum_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="fans.ecfc.app"
            android:targetClass="fans.ecfc.app.MainActivity"
            android:data="ecfc://forum" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="checkin"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_checkin"
        android:shortcutShortLabel="@string/shortcut_checkin_short"
        android:shortcutLongLabel="@string/shortcut_checkin_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="fans.ecfc.app"
            android:targetClass="fans.ecfc.app.MainActivity"
            android:data="ecfc://checkin" />
    </shortcut>
    <shortcut
        android:shortcutId="notifications"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_notifications"
        android:shortcutShortLabel="@string/shortcut_notifications_short"
        android:shortcutLongLabel="@string/shortcut_notifications_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="fans.ecfc.app"
            android:targetClass="fans.ecfc.app.MainActivity"
            android:data="ecfc://notifications" />
    </shortcut>
</shortcuts>
